--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-.env
-/node_modules/*
-package-lock.json
+exercises-app/backend/.env
+exercises-app/backend/node_modules/*
+exercises-app/backend/package-lock.json
