--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 exercises-app/backend/.env
-exercises-app/backend/node_modules/*
+exercises-app/backend/node_modules
 exercises-app/backend/package-lock.json
