--- a/exercises-app/backend/package.json
+++ b/exercises-app/backend/package.json
@@ -15,5 +15,8 @@
     "express": "^4.18.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.5.0"
+  },
+  "engines": {
+    "node": ">14 =<15"
   }
 }
