--- a/exercises-app/frontend/package.json
+++ b/exercises-app/frontend/package.json
@@ -12,6 +12,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-keep-alive": "^2.5.2",
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
